--- a/max_feign/.gitignore
+++ b/max_feign/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 /target/
-!.mvn/wrapper/maven-wrapper.jar
+###!.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -24,3 +24,8 @@ HELP.md
 /nbdist/
 /.nb-gradle/
 /build/
+
+
+.mvn/
+mvnw
+mvnw.cmd
