--- a/max_mybatis_mapper/.gitignore
+++ b/max_mybatis_mapper/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 /target/
-!.mvn/wrapper/maven-wrapper.jar
+###!.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -27,3 +27,5 @@ HELP.md
 
 ### VS Code ###
 .vscode/
+
+.mvn/
