--- a/max_feign/src/main/resources/application.properties
+++ b/max_feign/src/main/resources/application.properties
@@ -1,3 +1,15 @@
-server.port=6666
+server.port=6766
 spring.application.name=service-feign
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+#mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.laozhang.max_feign.entity
+
+spring.cloud.alibaba.seata.tx-service-group=fsp_tx_group
+
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/seat-order?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=taobang
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
