--- a/max_mybatis_xml/pom.xml
+++ b/max_mybatis_xml/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
