20210820 ms 增加登录、获取用户信息，本地登录已经跑通

--- a/ms-parent/ms-gateway/pom.xml
+++ b/ms-parent/ms-gateway/pom.xml
@@ -20,6 +20,25 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- commons 公共项目 -->
+        <dependency>
+            <groupId>com.laozhang</groupId>
+            <artifactId>commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <!-- 和 webflux 冲突 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.battcn</groupId>
+                    <artifactId>swagger-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- 自定义的元数据依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
