--- a/ms-parent/ms-gateway/src/main/resources/application.yml
+++ b/ms-parent/ms-gateway/src/main/resources/application.yml
@@ -14,7 +14,24 @@ spring:
         - id: ms-diners
           uri: lb://ms-diners
           predicates:
-            - Path=/hello/**
+            - Path=/diners/**
+          filters:
+            - StripPrefix=1
+
+        - id: ms-oauth2-server
+          uri: lb://ms-oauth2-server
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+
+# 配置白名单路径
+secure:
+  ignore:
+    urls:
+      - /actuator/**
+      - /auth/oauth/**
+      - /diners/signin
 
 # 配置 Eureka Server 注册中心
 eureka:
@@ -24,3 +41,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8080/eureka/
+
+logging:
+  pattern:
+    console: '%d{HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n'
