--- a/ms-parent/ms-diners/src/main/resources/application.yml
+++ b/ms-parent/ms-diners/src/main/resources/application.yml
@@ -4,6 +4,35 @@ server:
 spring:
   application:
     name: ms-diners
+  # 数据库
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 123456
+    url: jdbc:mysql://127.0.0.1:3306/db_imooc?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useUnicode=true&useSSL=false
+  # Redis
+  redis:
+    port: 6379
+    host: localhost
+    timeout: 3000
+    password: 123456
+  # swagger
+  swagger:
+    base-package: com.laozhang.diners
+    title: 美食社交食客API接口文档
+
+# Oauth2 客户端信息
+oauth2:
+  client:
+    client-id: appId
+    secret: 123456
+    grant_type: password
+    scope: api
+
+# oauth2 服务地址
+service:
+  name:
+    ms-oauth-server: http://ms-oauth2-server/
 
 # 配置 Eureka Server 注册中心
 eureka:
@@ -13,3 +42,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8080/eureka/
+
+logging:
+  pattern:
+    console: '%d{HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n'
+
+
