--- a/ms-parent/pom.xml
+++ b/ms-parent/pom.xml
@@ -16,6 +16,8 @@
         <module>ms-registry</module>
         <module>ms-gateway</module>
         <module>ms-diners</module>
+        <module>commons</module>
+        <module>ms-oauth2-server</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -25,7 +27,7 @@
         <spring-cloud-version>Hoxton.SR8</spring-cloud-version>
         <lombok-version>1.18.16</lombok-version>
         <commons-lang-version>3.11</commons-lang-version>
-        <mybatis-starter-version>2.1.3</mybatis-starter-version>
+        <mybatis-starter-version>2.2.0</mybatis-starter-version>
         <swagger-starter-version>2.1.5-RELEASE</swagger-starter-version>
         <hutool-version>5.4.7</hutool-version>
         <guava-version>20.0</guava-version>
