--- a/ms-parent/pom.xml
+++ b/ms-parent/pom.xml
@@ -18,6 +18,7 @@
         <module>ms-diners</module>
         <module>commons</module>
         <module>ms-oauth2-server</module>
+        <module>ms-points</module>
     </modules>
     <packaging>pom</packaging>
 
