--- a/ms-parent/ms-shardingsphere/src/main/resources/application-sharding-databases-tables2.properties
+++ b/ms-parent/ms-shardingsphere/src/main/resources/application-sharding-databases-tables2.properties
@@ -1,19 +1,16 @@
 spring.shardingsphere.datasource.names=ds3,ds4,ds5
 
-spring.shardingsphere.datasource.ds3.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.ds3.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.common.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.common.type=com.alibaba.druid.pool.DruidDataSource
+
 spring.shardingsphere.datasource.ds3.url=jdbc:mysql://localhost:3306/ds3?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.shardingsphere.datasource.ds3.username=root
 spring.shardingsphere.datasource.ds3.password=taobang
 
-spring.shardingsphere.datasource.ds4.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.ds4.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds4.url=jdbc:mysql://localhost:3306/ds4?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.shardingsphere.datasource.ds4.username=root
 spring.shardingsphere.datasource.ds4.password=taobang
 
-spring.shardingsphere.datasource.ds5.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.ds5.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds5.url=jdbc:mysql://localhost:3306/ds5?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.shardingsphere.datasource.ds5.username=root
 spring.shardingsphere.datasource.ds5.password=taobang
@@ -22,6 +19,11 @@ spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding
 spring.shardingsphere.rules.sharding.default-database-strategy.standard.sharding-algorithm-name=database-inline
 spring.shardingsphere.rules.sharding.binding-tables=health_record,health_task
 spring.shardingsphere.rules.sharding.broadcast-tables=health_level
+
+spring.shardingsphere.rules.sharding.tables.user.actual-data-nodes=ds$->{3..5}.user
+
+spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-algorithm-name=database-inline
 
 spring.shardingsphere.rules.sharding.sharding-algorithms.database-inline.type=INLINE
 spring.shardingsphere.rules.sharding.sharding-algorithms.database-inline.props.algorithm-expression=ds$->{user_id % 3 + 3}
@@ -48,4 +50,7 @@ spring.shardingsphere.rules.sharding.tables.health_task.key-generate-strategy.ke
 
 spring.shardingsphere.rules.sharding.key-generators.snowflake.type=SNOWFLAKE
 spring.shardingsphere.rules.sharding.key-generators.snowflake.props.worker-id=1
+
+spring.shardingsphere.props.sql-show=true
+
 
